# wasm-bindgen

./: Cargo.toml
crates/web-sys/: Cargo.toml
crates/web-sys/webidls/enabled/: Navigator.webidl  XRDevice.webidl
examples/webxr/: Cargo.toml
examples/webxr/src/: lib.rs
