[package]
name = "webxr"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.29"
js-sys = "0.3.27"
wasm-bindgen = {version = "0.2.50", features = ["serde-serialize"]}
wasm-bindgen-futures = "^0.3.27"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Headers',
  'Navigator',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Xr',
  'XrBoundedReferenceSpace',
  'XrEnvironmentBlendMode',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrLayer',
  'XrPose',
  'XrPresentationContext',
  'XrRay',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionMode',
  'XrSpace',
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'console'
]
